--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,13 @@
         <button id="getXML">getXML</button>
         <button id="getJson">getJson</button>
         <button id="getPage">getPage</button>
-        <script src="./main.js"></script>
+
     </p>
     <div>
         {{page1}}
     </div>
+    <script src="https://cdn.bootcss.com/axios/0.19.0-beta.1/axios.min.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
